// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Icons block transforms to Columns block 1`] = `
"<!-- fp:columns -->
<div class="fp-block-columns"><!-- fp:column {"width":"100%"} -->
<div class="fp-block-column" style="flex-basis:100%"><!-- fp:social-links -->
<ul class="fp-block-social-links"><!-- fp:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fp:social-link {"service":"facebook"} /-->

<!-- fp:social-link {"service":"twitter"} /-->

<!-- fp:social-link {"service":"instagram"} /--></ul>
<!-- /fp:social-links --></div>
<!-- /fp:column --></div>
<!-- /fp:columns -->"
`;

exports[`Social Icons block transforms to Group block 1`] = `
"<!-- fp:group {"layout":{"type":"constrained"}} -->
<div class="fp-block-group"><!-- fp:social-links -->
<ul class="fp-block-social-links"><!-- fp:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fp:social-link {"service":"facebook"} /-->

<!-- fp:social-link {"service":"twitter"} /-->

<!-- fp:social-link {"service":"instagram"} /--></ul>
<!-- /fp:social-links --></div>
<!-- /fp:group -->"
`;
